Fixed css code for mobile when you click on a painting. Fixed so that exit screen shows when on mobile. Removed unnecessary lines of code that had been commented out.

--- a/DSU21_5/wwwroot/css/ShowroomStyleSheet.css
+++ b/DSU21_5/wwwroot/css/ShowroomStyleSheet.css
@@ -18,7 +18,9 @@
 }
 
 
-
+#myUL{
+    margin: 0;
+}
 
 
 #exit {
@@ -45,6 +47,40 @@
 
 @media only screen and (max-width: 1000px) {
 
+    #artInfo img {
+       display: none;
+    }
+
+    #cross{
+        position: absolute;
+        top: 2vh;
+        right: 2vh;
+        width: 35px !important;
+        height: 35px !important;
+    }
+
+    #cross img{
+        max-width: 35px !important;
+        max-height: 35px !important;
+        min-width: 35px !important;
+        min-height: 35px !important;
+        display: block;
+    }
+
+    #art-info-text {
+        text-align: center;
+        margin: 0 !important;
+        padding-top: 5vh;
+        width: 100%;
+        height: 95vh;
+        font-size: 16px;
+        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(55,55,55);
+        position: absolute; 
+        top: 0; 
+        left: 0;
+        background: rgba(255, 255, 255, 0.85);
+    }
 
     #arrow-keys {
         display: block;
